# songs-teller

./: .gitignore  README.md  pyproject.toml  requirements.txt  songs-teller.code-workspace
.github/: dependabot.yml
.github/workflows/: automatic-tests.yml  python-app.yml
api/: songs-teller.postman_collection.json
app/: .env.example  config.json  config.py  llm.py  prompt.txt  requirements.txt  routes.py  song_teller_api.py  tts.py
config/: .env.example  config.json  prompt.txt
docs/: API_USAGE.md  RUNNING_CHATTERBOX_LOCALLY.md  RUNNING_OLLAMA_LOCALLY.md  sample_songs_list.json
scripts/: run.py
src/songs_teller/: __init__.py  api.py  config.py  llm.py  routes.py  tts.py  utils.py
tests/: README.md  __init__.py  conftest.py  test_api_routes.py  test_app.py  test_config.py  test_llm.py  test_tts.py
